Bug 1288456: Resolve the target's prototype earlier in Function.prototype.bind. r=till